--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="#Rsc">Research</a></li>
 							<li><a href="#Pub">Publications</a></li>
 							<li><a href="#Pep">People</a></li>
-							<li><a href="#MyHob">My Little Hobbies</a></li>
+							<li><a href="#MyHob">My Hobbies</a></li>
 						</ul>
 					</nav>
 
