--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				
 				                                                <p>Spring 2021 <br />
 											ES 403: Heat Transfer (Online).</a> <br />
-	Even though I thought I was fully prepared this time, fully online class was a great chellenge since no instant feedback can be 
+	Even though I thought I was well prepared this time, fully online class was a great chellenge since no instant feedback can be 
 	seen from students. Most of my jokes did not work, plagiarism was another big problem, almost nobody wanted to do work.		
 		                                                                <p>Fall 2020 <br />
 											ES 403: Heat Transfer (Half online half in person).</a> <br />
