--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										</header>
 									        <p>Fall 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
-								A almost perfect semester. Most students were proactive, ready to learn, and always prepared. Hurricanes shortened the class time by 200 mins, which was a pity.
+								A nearly perfect semester. Most students were proactive, ready to learn, and always prepared. Hurricanes shortened the class time by 200 mins, which was a pity.
 								
 										<p>Spring 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
