--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 
 <h2>Teaching Experience</h2>
 										</header>
+									        <p>Spring 2023 <br />
+											ES 403: Heat Transfer.</a> <br />
+								In progress.
+								
 									        <p>Fall 2022 <br />
 											ES 403: Heat Transfer.</a> <br />
 								A nearly perfect semester. Most students were proactive, ready to learn, and always prepared. Hurricanes shortened the class time by 200 mins, which was a pity.
