--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@ sCO2 is a non-toxic working fluid with the ability to be applied to concentrated
 								<header class="major">
 									<h2>Publications</h2>
 										</header>
-						                                <p>Currently, I am working on three papers: <br />
-											1. Paper about comprehensive review of heat transfer correlations of supercritical CO2, published on September 16, 2022. <br />
-											2. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, the first draft of manuscript was finished in August 2022. <br />
-											3. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
+						                                <p>Currently, I am working on two papers: <br />
+											1. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, editing the final manuscript. <br />
+											2. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
 									
 										<p>Featured Articles: <br />
 
