--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#Home" class="active">Home</a></li>
+							<li><a href="#Home" class="active">About</a></li>
 							<li><a href="#Rsc">Research</a></li>
 							<li><a href="#Pub">Publications</a></li>
 							<li><a href="#Pep">People</a></li>
