--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 					</header>
 
 				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#Home" class="active">About</a></li>
-							<li><a href="#Rsc">Research</a></li>
-							<li><a href="#Pub">Publications</a></li>
-							<li><a href="#Pep">People</a></li>
-							<li><a href="#MyHob">My Hobbies</a></li>
-						</ul>
-					</nav>
+<nav id="nav">
+    <ul>
+        <li><a href="#Home" class="active">About</a></li>
+        <li><a href="#Classes">Classes</a></li>
+        <li><a href="#Rsc">Research</a></li>
+        <li><a href="#Pub">Publications</a></li>
+        <li><a href="#Pep">People</a></li>
+        <li><a href="#MyHob">My Hobbies</a></li>
+    </ul>
+</nav>
 
 				<!-- Main -->
 					<div id="main">
