--- a/index.html
+++ b/index.html
@@ -92,7 +92,23 @@ Office Hours (Fall 2022): Mon/Wed/Fri 1100-1200, or other times by appointment.<
 									<span class="image"><img src="images/Me.jpg" alt="" /></span>
 								</div>
 							</section>
+<!-- Classes -->
+<section id="Classes" class="main">
+    <div class="spotlight">
+        <div class="content">
+            <header class="major">
+                <h2>Classes</h2>
+            </header>
+            <ul>
+                <li>MECH208</li>
+                <li>MECH338</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
+
+					
 						<!-- Research -->
 							<section id="Rsc" class="main">
 								<div class="spotlight">
