--- a/index.html
+++ b/index.html
@@ -25,16 +25,24 @@
 					</header>
 
 				<!-- Nav -->
+<!-- Nav -->
 <nav id="nav">
     <ul>
         <li><a href="#Home" class="active">About</a></li>
-        <li><a href="#Classes">Classes</a></li>
+        <li class="dropdown">
+            <a href="#Classes">Classes</a>
+            <ul class="dropdown-content">
+                <li><a href="#">MECH208 Intro to Technical Computating</a></li>
+                <li><a href="#">MECH338 Heat Transfer</a></li>
+            </ul>
+        </li>
         <li><a href="#Rsc">Research</a></li>
         <li><a href="#Pub">Publications</a></li>
         <li><a href="#Pep">People</a></li>
         <li><a href="#MyHob">My Hobbies</a></li>
     </ul>
 </nav>
+
 
 				<!-- Main -->
 					<div id="main">
