--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 						<p>All models are wrong, but some are close enough to be useful.</p>
 					</header>
 
-				<!-- Nav -->
 <!-- Nav -->
 <nav id="nav">
     <ul>
@@ -32,7 +31,7 @@
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
-                <li><a href="#">MECH208 Intro to Technical Computating</a></li>
+                <li><a href="#">MECH208 Intro to Technical Computing</a></li>
                 <li><a href="#">MECH338 Heat Transfer</a></li>
             </ul>
         </li>
