--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Nav -->
 <nav id="nav">
     <ul>
-        <li><a href="#Home" class="active">About</a></li>
+        <li><a href="#About">About</a></li>
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
@@ -35,12 +35,12 @@
                 <li><a href="#">MECH338 Heat Transfer</a></li>
             </ul>
         </li>
-        <li><a href="#Rsc">Research</a></li>
-        <li><a href="#Pub">Publications</a></li>
-        <li><a href="#Pep">People</a></li>
-        <li><a href="#MyHob">My Hobbies</a></li>
+        <li><a href="#Research">Research</a></li>
+        <li><a href="#Publications">Publications</a></li>
+        <li><a href="#People">People</a></li>
     </ul>
 </nav>
+
 
 
 				<!-- Main -->
