--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
-                <li><a href="#">MECH208 Intro to Technical Computing</a></li>
-                <li><a href="#">MECH338 Heat Transfer</a></li>
+                <li><a href="#">MECH 208</a></li>
+                <li><a href="#">MECH 338</a></li>
             </ul>
         </li>
         <li><a href="#Research">Research</a></li>
