--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="main">
 
     <!-- Home -->
-    <section id="Home" class="main">
+    <section id="About" class="main">
         <div class="spotlight">
             <div class="content">
                 <!-- About Me -->
