--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="#Research">Research</a></li>
         <li><a href="#Publications">Publications</a></li>
         <li><a href="#People">People</a></li>
+	<li><a href="#MyHobbies">My Hobbies</a></li>
     </ul>
 </nav>
 
