--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <nav id="nav">
     <ul>
         <li><a href="#About">About</a></li>
+	<li><a href="#Teach">Teaching Experience</a></li>
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
@@ -120,6 +121,21 @@
         </div>
     </section>
 
+
+<!-- Teaching Experience -->
+<section id="Teach" class="main">
+    <div class="spotlight">
+        <div class="content">
+            <header class="major">
+                <h2>Teaching Experience</h2>
+            </header>
+            <ul>
+                <li>ERAU</li>
+                <li>Chico State</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
 				
 <!-- Classes -->
