--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav id="nav">
     <ul>
         <li><a href="#About">About</a></li>
-	<li><a href="#Teach">Teaching Experience</a></li>
+	<li><a href="#Teach">Teaching</a></li>
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
