--- a/index.html
+++ b/index.html
@@ -142,16 +142,25 @@
 <section id="Classes" class="main">
     <div class="spotlight">
         <div class="content">
+            <!-- Main Title -->
             <header class="major">
                 <h2>Classes</h2>
             </header>
+
+            <!-- Subsection: Teaching Interests -->
+            <h3>Teaching Interests</h3>
+            <p>Matlab Coding, Thermodynamics and Heat Transfer.</p>
+
+            <!-- Subsection: Current Classes -->
+            <h3>Current Classes</h3>
             <ul>
-                <li>MECH208</li>
-                <li>MECH338</li>
+                <li><strong>MECH208</strong>: Introduction to Technical Computing</li>
+                <li><strong>MECH338</strong>: Heat Transfer</li>
             </ul>
         </div>
     </div>
 </section>
+
 
 						
 <!-- Research -->
