--- a/index.html
+++ b/index.html
@@ -154,8 +154,16 @@
             <!-- Subsection: Current Classes -->
             <h3>Current Classes</h3>
             <ul>
-                <li><strong>MECH208</strong>: Introduction to Technical Computing</li>
-                <li><strong>MECH338</strong>: Heat Transfer</li>
+                <li><strong>MECH 208</strong>: Introduction to Technical Computing</li>
+                <li><strong>MECH 338</strong>: Heat Transfer</li>
+            </ul>
+
+	    <h3>Previous Classes (Embry-Riddle Aeronautical University)</h3>
+            <ul>
+                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab</li>
+                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab</li>
+		<li><strong>ES 403</strong>: Heat Transfer (Fall 2020 - Spring 2024)</li>
+		<li><strong>AE 403</strong>: Jet Propulsion</li>
             </ul>
         </div>
     </div>
