--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <!-- Subsection: Teaching Interests -->
             <h3>Teaching Interests</h3>
-            <p>Matlab Coding, Thermodynamics and Heat Transfer.</p>
+            <p>Matlab Coding, Thermodynamics, Heat Transfer and Jet Propulsion.</p>
 
             <!-- Subsection: Current Classes -->
             <h3>Current Classes</h3>
@@ -160,10 +160,11 @@
 
 	    <h3>Previous Classes (Embry-Riddle Aeronautical University)</h3>
             <ul>
-                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab</li>
-                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab</li>
+                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab (Fall 2021)</li>
+                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab (Fall 2021)</li>
 		<li><strong>ES 403</strong>: Heat Transfer (Fall 2020 - Spring 2024)</li>
-		<li><strong>AE 403</strong>: Jet Propulsion</li>
+		<li><strong>AE 508</strong>: Intermediate Heat Transfer (Fall 2019 - Spring 2020)</li>
+		<li><strong>AE 403</strong>: Jet Propulsion (Spring 2018 - Spring 2019)</li>
             </ul>
         </div>
     </div>
