--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
 
 	    <h3>Previous Classes (Embry-Riddle Aeronautical University)</h3>
             <ul>
-                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab (Fall 2021)</li>
-                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab (Fall 2021)</li>
-		<li><strong>ES 403</strong>: Heat Transfer (Fall 2020 - Spring 2024)</li>
-		<li><strong>AE 508</strong>: Intermediate Heat Transfer (Fall 2019 - Spring 2020)</li>
-		<li><strong>AE 403</strong>: Jet Propulsion (Spring 2018 - Spring 2019)</li>
+		<li><strong>ES 403</strong>: Heat Transfer, Spring 2022 - Spring 2024, Instructor of Record</li>
+                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab, Fall 2021, TA</li>
+                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab, Fall 2021, TA</li>
+		<li><strong>ES 403</strong>: Heat Transfer, Fall 2020 - Spring 2021, TA</li>
+		<li><strong>AE 508</strong>: Intermediate Heat Transfer, Fall 2019 - Spring 2020, TA</li>
+		<li><strong>AE 403</strong>: Jet Propulsion, Spring 2018 - Spring 2019, TA</li>
             </ul>
         </div>
     </div>
