--- a/index.html
+++ b/index.html
@@ -148,25 +148,57 @@
             </header>
 
             <!-- Subsection: Teaching Interests -->
-            <h3>Teaching Interests</h3>
-            <p>Matlab Coding, Thermodynamics, Heat Transfer and Jet Propulsion.</p>
+            <section class="teaching-interests">
+                <h3>Teaching Interests</h3>
+                <p>Matlab Coding, Thermodynamics, Heat Transfer, and Jet Propulsion.</p>
+            </section>
 
             <!-- Subsection: Current Classes -->
-            <h3>Current Classes</h3>
-            <ul>
-                <li><strong>MECH 208</strong>: Introduction to Technical Computing</li>
-                <li><strong>MECH 338</strong>: Heat Transfer</li>
-            </ul>
+            <section class="current-classes">
+                <h3>Current Classes</h3>
+                <ul class="class-list">
+                    <li>
+                        <strong>MECH 208</strong>
+                        <span class="details">Introduction to Technical Computing</span>
+                    </li>
+                    <li>
+                        <strong>MECH 338</strong>
+                        <span class="details">Heat Transfer</span>
+                    </li>
+                </ul>
+            </section>
 
-	    <h3>Previous Classes (Embry-Riddle Aeronautical University)</h3>
-            <ul>
-		<li><strong>ES 403</strong>: Heat Transfer, Spring 2022 - Spring 2024, Instructor of Record</li>
-                <li><strong>ME 314L</strong>: Instrument and Data Acquisition Lab, Fall 2021, TA</li>
-                <li><strong>ME 438L</strong>: Model-Based Control System Design Lab, Fall 2021, TA</li>
-		<li><strong>ES 403</strong>: Heat Transfer, Fall 2020 - Spring 2021, TA</li>
-		<li><strong>AE 508</strong>: Intermediate Heat Transfer, Fall 2019 - Spring 2020, TA</li>
-		<li><strong>AE 403</strong>: Jet Propulsion, Spring 2018 - Spring 2019, TA</li>
-            </ul>
+            <!-- Subsection: Previous Classes -->
+            <section class="previous-classes">
+                <h3>Previous Classes</h3>
+                <p><em>Embry-Riddle Aeronautical University</em></p>
+                <ul class="class-list">
+                    <li>
+                        <strong>ES 403</strong>
+                        <span class="details">Heat Transfer, Spring 2022 - Spring 2024 | Instructor of Record</span>
+                    </li>
+                    <li>
+                        <strong>ME 314L</strong>
+                        <span class="details">Instrument and Data Acquisition Lab, Fall 2021 | TA</span>
+                    </li>
+                    <li>
+                        <strong>ME 438L</strong>
+                        <span class="details">Model-Based Control System Design Lab, Fall 2021 | TA</span>
+                    </li>
+                    <li>
+                        <strong>ES 403</strong>
+                        <span class="details">Heat Transfer, Fall 2020 - Spring 2021 | TA</span>
+                    </li>
+                    <li>
+                        <strong>AE 508</strong>
+                        <span class="details">Intermediate Heat Transfer, Fall 2019 - Spring 2020 | TA</span>
+                    </li>
+                    <li>
+                        <strong>AE 403</strong>
+                        <span class="details">Jet Propulsion, Spring 2018 - Spring 2019 | TA</span>
+                    </li>
+                </ul>
+            </section>
         </div>
     </div>
 </section>
