--- a/index.html
+++ b/index.html
@@ -175,27 +175,27 @@
                 <ul class="class-list">
                     <li>
                         <strong>ES 403</strong>
-                        <span class="details">Heat Transfer, Spring 2022 - Spring 2024 | Instructor of Record</span>
+                        <span class="details">Heat Transfer | Spring 2022 - Spring 2024 | Instructor of Record</span>
                     </li>
                     <li>
                         <strong>ME 314L</strong>
-                        <span class="details">Instrument and Data Acquisition Lab, Fall 2021 | TA</span>
+                        <span class="details">Instrument and Data Acquisition Lab | Fall 2021 | TA</span>
                     </li>
                     <li>
                         <strong>ME 438L</strong>
-                        <span class="details">Model-Based Control System Design Lab, Fall 2021 | TA</span>
+                        <span class="details">Model-Based Control System Design Lab | Fall 2021 | TA</span>
                     </li>
                     <li>
                         <strong>ES 403</strong>
-                        <span class="details">Heat Transfer, Fall 2020 - Spring 2021 | TA</span>
+                        <span class="details">Heat Transfer | Fall 2020 - Spring 2021 | TA</span>
                     </li>
                     <li>
                         <strong>AE 508</strong>
-                        <span class="details">Intermediate Heat Transfer, Fall 2019 - Spring 2020 | TA</span>
+                        <span class="details">Intermediate Heat Transfer | Fall 2019 - Spring 2020 | TA</span>
                     </li>
                     <li>
                         <strong>AE 403</strong>
-                        <span class="details">Jet Propulsion, Spring 2018 - Spring 2019 | TA</span>
+                        <span class="details">Jet Propulsion | Spring 2018 - Spring 2019 | TA</span>
                     </li>
                 </ul>
             </section>
