--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <!-- Subsection: Current Classes -->
             <section class="current-classes">
                 <h3>Current Classes</h3>
+		<p><em>California State University Chico</em></p>
                 <ul class="class-list">
                     <li>
                         <strong>MECH 208</strong>
