--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 <nav id="nav">
     <ul>
         <li><a href="#About">About</a></li>
-	<li><a href="#Teach">Teaching</a></li>
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
@@ -56,7 +55,8 @@
                     <h2>About Me</h2>
                 </header>
                 <p>
-                    I am a Ph.D. student in Mechanical Engineering at Embry-Riddle Aeronautical University, focusing on heat transfer performance in 
+                    I am an Assistant Professor at California State University Chico, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department.
+		    I obtained my PhD in Mechanical Engineering at Embry-Riddle Aeronautical University, focusing on heat transfer performance in 
                     <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>.
                     I obtained my Master’s degree in Aerospace Engineering in 2020, concentrated in Heat Transfer in Propulsion System Design at Embry-Riddle Aeronautical University. 
                     Before that, I received my Bachelor’s degree in Aerospace Engineering from Civil Aviation University of China. <br /><br />
@@ -120,22 +120,6 @@
             </span>
         </div>
     </section>
-
-
-<!-- Teaching Experience -->
-<section id="Teach" class="main">
-    <div class="spotlight">
-        <div class="content">
-            <header class="major">
-                <h2>Teaching Experience</h2>
-            </header>
-            <ul>
-                <li>ERAU</li>
-                <li>Chico State</li>
-            </ul>
-        </div>
-    </div>
-</section>
 
 				
 <!-- Classes -->
