--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
                 <header class="major">
                     <h2>About Me</h2>
                 </header>
+		<p>
+                I am an <strong>Assistant Professor</strong> in the Department of Mechanical and Mechatronic Engineering and Advanced Manufacturing at 
+                <strong>California State University, Chico</strong>. My academic journey began with a <strong>Bachelor's degree in Aerospace Engineering</strong> 
+                from the <strong>Civil Aviation University of China</strong>, where I developed a strong foundation in engineering principles.
+                </p>
                 <p>
-                    I am an Assistant Professor at California State University Chico, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department.
-		    I obtained my PhD in Mechanical Engineering at Embry-Riddle Aeronautical University, focusing on heat transfer performance in 
-                    <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</a>.
-                    I obtained my Master’s degree in Aerospace Engineering in 2020, concentrated in Heat Transfer in Propulsion System Design at Embry-Riddle Aeronautical University. 
-                    Before that, I received my Bachelor’s degree in Aerospace Engineering from Civil Aviation University of China. <br /><br />
-                    Besides research, I am also the Instructor of Record (IOR) for undergraduate-level Heat Transfer classes.
+		I went on to earn a <strong>Master's degree in Aerospace Engineering</strong> from <strong>Embry-Riddle Aeronautical University</strong> in 2020, 
+                specializing in <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, I pursued my <strong>Ph.D. in Mechanical Engineering</strong> 
+                at Embry-Riddle, with a research focus on <strong>heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</strong> systems—a field that holds 
+                promising applications in energy efficiency and power generation.
+                </p>
+		<p>
+                Now, as a faculty member, I am dedicated to advancing research and inspiring students in the areas of <strong>thermal sciences</strong>, 
+                <strong>heat transfer</strong>, and <strong>aerospace applications</strong>.
                 </p>
 
                 <!-- Teaching Experience -->
