--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
                 from the <strong>Civil Aviation University of China</strong>, where I developed a strong foundation in engineering principles.
                 </p>
                 <p>
-		I went on to earn a <strong>Master's degree in Aerospace Engineering</strong> from <strong>Embry-Riddle Aeronautical University</strong> in 2020, 
-                specializing in <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, I pursued my <strong>Ph.D. in Mechanical Engineering</strong> 
-                at Embry-Riddle, with a research focus on <strong>heat transfer performance in <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide">Supercritical Carbon Dioxide (sCO2)</strong> systems—a field that holds 
+		I went on to earn a <strong>Master's degree in Aerospace Engineering</strong> from 
+                <strong>Embry-Riddle Aeronautical University</strong> in 2020, specializing in 
+                <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, 
+                I pursued my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle, 
+                with a research focus on heat transfer performance in 
+                <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide" class="dashed-underline">
+                <strong>Supercritical Carbon Dioxide (sCO2)</strong></a> systems—a field that holds 
                 promising applications in energy efficiency and power generation.
                 </p>
 		<p>
