--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
                 <p><em>Embry-Riddle Aeronautical University</em></p>
                 <ul class="class-list">
                     <li>
-                        <strong>ES 403</strong>
-                        <span class="details">Heat Transfer | Spring 2022 - Spring 2024 | Instructor of Record</span>
+                        <strong>ES 403 Heat Transfer</strong>
+                        <span class="details">Spring 2022 - Spring 2024 | Instructor of Record</span>
                     </li>
                     <li>
-                        <strong>ME 314L</strong>
-                        <span class="details">Instrument and Data Acquisition Lab | Fall 2021 | TA</span>
+                        <strong>ME 314L Instrument and Data Acquisition Lab</strong>
+                        <span class="details">Fall 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>ME 438L</strong>
-                        <span class="details">Model-Based Control System Design Lab | Fall 2021 | TA</span>
+                        <strong>ME 438L Model-Based Control System Design Lab</strong>
+                        <span class="details">Fall 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>ES 403</strong>
-                        <span class="details">Heat Transfer | Fall 2020 - Spring 2021 | TA</span>
+                        <strong>ES 403 Heat Transfer</strong>
+                        <span class="details">Fall 2020 - Spring 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>AE 508</strong>
-                        <span class="details">Intermediate Heat Transfer | Fall 2019 - Spring 2020 | TA</span>
+                        <strong>AE 508 Intermediate Heat Transfer</strong>
+                        <span class="details">Fall 2019 - Spring 2020 | TA</span>
                     </li>
                     <li>
-                        <strong>AE 403</strong>
-                        <span class="details">Jet Propulsion | Spring 2018 - Spring 2019 | TA</span>
+                        <strong>AE 403 Jet Propulsion</strong>
+                        <span class="details">Spring 2018 - Spring 2019 | TA</span>
                     </li>
                 </ul>
             </section>
