--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
 		<p><em>California State University Chico</em></p>
                 <ul class="class-list">
                     <li>
-                        <strong>MECH 208</strong>
+                        <strong>MECH208 Introduction to Technical Computing</strong>
                         <span class="details">Introduction to Technical Computing</span>
                     </li>
                     <li>
-                        <strong>MECH 338</strong>
-                        <span class="details">Heat Transfer</span>
+                        <strong>MECH338 Heat Transfer</strong>
+                        <span class="details">Course Description: This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. 
+				It introduces numerical methods such as finite-difference and finite-element analysis. 
+				Additionally, the course covers free and forced convection, along with radiation heat transfer.</span>
                     </li>
                 </ul>
             </section>
@@ -130,27 +132,27 @@
                 <p><em>Embry-Riddle Aeronautical University</em></p>
                 <ul class="class-list">
                     <li>
-                        <strong>ES 403 Heat Transfer</strong>
+                        <strong>ES403 Heat Transfer</strong>
                         <span class="details">Spring 2022 - Spring 2024 | Instructor of Record</span>
                     </li>
                     <li>
-                        <strong>ME 314L Instrument and Data Acquisition Lab</strong>
+                        <strong>ME314L Instrument and Data Acquisition Lab</strong>
                         <span class="details">Fall 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>ME 438L Model-Based Control System Design Lab</strong>
+                        <strong>ME438L Model-Based Control System Design Lab</strong>
                         <span class="details">Fall 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>ES 403 Heat Transfer</strong>
+                        <strong>ES403 Heat Transfer</strong>
                         <span class="details">Fall 2020 - Spring 2021 | TA</span>
                     </li>
                     <li>
-                        <strong>AE 508 Intermediate Heat Transfer</strong>
+                        <strong>AE508 Intermediate Heat Transfer</strong>
                         <span class="details">Fall 2019 - Spring 2020 | TA</span>
                     </li>
                     <li>
-                        <strong>AE 403 Jet Propulsion</strong>
+                        <strong>AE403 Jet Propulsion</strong>
                         <span class="details">Spring 2018 - Spring 2019 | TA</span>
                     </li>
                 </ul>
