--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                 <ul class="class-list">
                     <li>
                         <strong>MECH208 Introduction to Technical Computing</strong>
-                        <span class="details">Introduction to Technical Computing</span>
+                        <span class="details">Course Description: This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
+				Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
+				The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
                     </li>
                     <li>
                         <strong>MECH338 Heat Transfer</strong>
