--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Subsection: Current Classes -->
             <section class="current-classes">
                 <h3>Current Classes</h3>
-		<p><em>California State University Chico</em></p>
+		<p><em>California State University, Chico</em></p>
                 <ul class="class-list">
                     <li>
                         <strong>MECH208 Introduction to Technical Computing</strong>
