--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <!-- Subsection: Teaching Interests -->
             <section class="teaching-interests">
                 <h3>Teaching Interests</h3>
-                <p>Matlab Coding, Thermodynamics, Heat Transfer, and Jet Propulsion.</p>
+                <p>MATLAB Programming, Thermodynamics, Heat Transfer, and Jet Propulsion.</p>
             </section>
 
             <!-- Subsection: Current Classes -->
