--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                 </header>
 		<p>
                 I am an <strong>Assistant Professor</strong> in the Department of Mechanical and Mechatronic Engineering and Advanced Manufacturing at 
-                <strong>California State University, Chico</strong>. My academic journey began with a <strong>Bachelor's degree in Aerospace Engineering</strong> 
-                from the <strong>Civil Aviation University of China</strong>, where I developed a strong foundation in engineering principles.
+                <strong>California State University, Chico</strong>. I am dedicated to advancing research and inspiring students in the areas of <strong>thermal sciences</strong>, 
+                <strong>heat transfer</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
+		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the <strong>Civil Aviation University of China</strong>. 
 		I went on to earn a <strong>Master's degree in Aerospace Engineering</strong> from 
                 <strong>Embry-Riddle Aeronautical University</strong> in 2020, specializing in 
                 <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, 
@@ -68,10 +69,6 @@
                 <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide" class="dashed-underline">
                 <strong>Supercritical Carbon Dioxide (sCO2)</strong></a> systems—a field that holds 
                 promising applications in energy efficiency and power generation.
-                </p>
-		<p>
-                Now, as a faculty member, I am dedicated to advancing research and inspiring students in the areas of <strong>thermal sciences</strong>, 
-                <strong>heat transfer</strong>, and <strong>aerospace applications</strong>.
                 </p>
 		    
                 <!-- Contact Information -->
