--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </header>
 		<p>
                 I am an <strong>Assistant Professor</strong> in the Department of Mechanical and Mechatronic Engineering and Advanced Manufacturing at 
-                <strong>California State University, Chico</strong>. I am dedicated to advancing research and inspiring students in the areas of <strong>thermal sciences</strong>, 
-                <strong>heat transfer</strong>, and <strong>aerospace applications</strong>.
+                <strong>California State University, Chico</strong>. I am dedicated to advancing research and inspiring students in the areas of <strong>Programming</strong>, 
+                <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
 		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the <strong>Civil Aviation University of China</strong>. 
