--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </header>
 		<p>
                 I am an <strong>Assistant Professor</strong> in the Department of Mechanical and Mechatronic Engineering and Advanced Manufacturing at 
-                <strong>California State University, Chico</strong>. I am dedicated to advancing research and inspiring students in the areas of <strong>Programming</strong>, 
+                <strong>California State University, Chico</strong>. I am passionate about teaching and mentoring students, inspiring them in the areas of <strong>programming</strong>, 
                 <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
