--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
-		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the <strong>Civil Aviation University of China</strong>. 
-		I went on to earn a <strong>Master's degree in Aerospace Engineering</strong> from 
+		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the <strong>Civil Aviation University of China</strong> and a <strong>Master's in Aerospace Engineering</strong> from 
                 <strong>Embry-Riddle Aeronautical University</strong> in 2020, specializing in 
                 <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, 
                 I pursued my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle, 
