--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
-		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the <strong>Civil Aviation University of China</strong> and a <strong>Master's in Aerospace Engineering</strong> from 
+		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the  
+		<a href="https://en.wikipedia.org/wiki/Civil_Aviation_University_of_China" class="dashed-underline"><strong>Civil Aviation University of China</strong> 
+		in 2018, and a <strong>Master's in Aerospace Engineering</strong> from 
                 <strong>Embry-Riddle Aeronautical University</strong> in 2020, specializing in 
                 <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, 
                 I pursued my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle, 
