--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>
+						<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>-->
 						<h1>Yang Chao, Ph.D.</h1>
 						<p>All models are wrong, but some are close enough to be useful.</p>
 					</header>
