--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span>-->
+						<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span> -->
 						<h1>Yang Chao, Ph.D.</h1>
 						<p>All models are wrong, but some are close enough to be useful.</p>
 					</header>
@@ -78,10 +78,10 @@
                 </header>
                 <p>
                     Address: 
-                    <a href="https://goo.gl/maps/J31z9jrRfBgsFU3T7">M Building, Office 114, 600 S Clyde Morris Blvd, Daytona Beach, FL 32114</a> <br />
+                    <a href="https://maps.app.goo.gl/sD9A6eZ9RWnRBVPA9">OCNL 422, 400 West First Street, Chico, CA 95929</a> <br />
                     Email: 
-                    <a href="mailto:chaoy@my.erau.edu">chaoy@my.erau.edu</a> <br />
-                    Office Hours (Fall 2022): Mon/Wed/Fri 11:00-12:00, or other times by appointment.
+                    <a href="mailto:chaoy@my.erau.edu">ychao@csuchico.edu</a> <br />
+                    <!-- Office Hours (Fall 2022): Mon/Wed/Fri 11:00-12:00, or other times by appointment.-->
                 </p>
             </div>
             <span class="image">
