--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 </header>
                 <p>
                     Address: 
-                    <a href="https://maps.app.goo.gl/sD9A6eZ9RWnRBVPA9">OCNL 422, 400 West First Street, Chico, CA 95929</a> <br />
+                    <a href="https://maps.app.goo.gl/sD9A6eZ9RWnRBVPA9" class="dashed-underline">OCNL 422, 400 West First Street, Chico, CA 95929</a> <br />
                     Email: 
-                    <a href="mailto:chaoy@my.erau.edu">ychao@csuchico.edu</a> <br />
+                    <a href="mailto:ychao@csuchico.edu" class="dashed-underline">ychao@csuchico.edu</a> <br />
                     <!-- Office Hours (Fall 2022): Mon/Wed/Fri 11:00-12:00, or other times by appointment.-->
                 </p>
             </div>
