--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
         <h2>Publications</h2>
     </header>
     <p>
-        Currently, I am working on two papers: <br />
-        1. Paper about investigation in adiabatic section in supercritical CO2 pipe flow, editing the final manuscript. <br />
-        2. Paper about machine learning in heat transfer correlations of supercritical CO2, still working on the manuscript. <br />
+        Currently, I have two conference papers that I will present: <br />
+        1. 2025 AIAA SciTech Forum in Orlando. <br />
+        2. 2025 ASME Aerospace Structures, Structural Dynamics, and Materials Conference. <br />
     </p>
     <p>
         Featured Articles: <br />
