--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <p>
         Currently, I have two conference papers that I will present: <br />
         1. 2025 AIAA SciTech Forum in Orlando. <br />
-        2. 2025 ASME Aerospace Structures, Structural Dynamics, and Materials Conference. <br />
+        2. 2025 ASME Aerospace Structures, Structural Dynamics, and Materials Conference in Houston. <br />
     </p>
     <p>
         Featured Articles: <br />
