--- a/index.html
+++ b/index.html
@@ -173,16 +173,31 @@
                 <h2>Research Topics</h2>
             </header>
             <p>
-                My research area of interests include thermal and fluid sciences with expertise of heat transfer. More specifically, my current field is heat transfer characteristics in supercritical carbon dioxide (sCO2). sCO2 is carbon dioxide held above a critical temperature and pressure, which causes it to act like a gas while having the density of a liquid. It’s also nontoxic and nonflammable, having been used in dry cleaning processes as well as to decaffeinate coffee. Its supercritical state makes sCO2 a highly efficient fluid to generate power because small changes in temperature or pressure cause significant shifts in its density. Here are some benefits of sCO2 power cycles: <br /><br />
+                My research interests lie in the domain of thermal and fluid sciences, 
+                with a specialization in heat transfer. Specifically, my work focuses 
+                on the heat transfer characteristics of supercritical carbon dioxide (sCO₂). 
+                Supercritical carbon dioxide is carbon dioxide maintained above its critical 
+                temperature and pressure, resulting in unique properties—it behaves like a gas 
+                but exhibits the density of a liquid. sCO₂ is nontoxic and nonflammable, with 
+                applications ranging from dry cleaning to decaffeination processes. These 
+                distinctive characteristics make sCO₂ a highly efficient working fluid for 
+                power generation, as small changes in temperature or pressure can lead to 
+                significant density variations. <br /><br />
 
-                1. Power generation is highly efficient: replacing steam or air with sCO2 as a thermal medium increases efficiency by as much as 10%. <br />
-                2. Construction cost is much less: sCO2 equipment is only 10% the size of conventional power plant components, a desk-sized sCO2 turbine could power 10,000 homes. <br />
-                3. Environmental impact is reduced: 
-                sCO2 is a non-toxic working fluid with the ability to be applied to concentrated solar power, natural gas, coal, biomass, geothermal energy, nuclear energy, ship-board propulsion, and waste heat recovery.
+                <strong>Key Advantages of sCO₂ Power Cycles:</strong><br />
+                1. <strong>High Efficiency in Power Generation:</strong> Replacing traditional 
+                thermal media such as steam or air with sCO₂ can improve thermal efficiency by up to 10%. <br />
+                2. <strong>Reduced Construction Costs:</strong> sCO₂ equipment is compact, 
+                with components approximately 10% the size of conventional power plant systems. 
+                For instance, a desk-sized sCO₂ turbine can generate enough power for 10,000 homes. <br />
+                3. <strong>Lower Environmental Impact:</strong> sCO₂ is a non-toxic working fluid 
+                compatible with diverse energy sources, including concentrated solar power, natural gas, 
+                coal, biomass, geothermal energy, nuclear energy, ship propulsion systems, and waste heat recovery.
             </p>
         </div>
     </div>
 </section>
+
 
 
 <!-- Publications -->
