--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
             <p>
                 My research interests lie in the domain of thermal and fluid sciences, 
                 with a specialization in heat transfer. Specifically, my work focuses 
-                on the heat transfer characteristics of supercritical carbon dioxide (sCO₂). 
+                on the heat transfer characteristics of supercritical carbon dioxide (sCO$_2$). 
                 Supercritical carbon dioxide is carbon dioxide maintained above its critical 
                 temperature and pressure, resulting in unique properties—it behaves like a gas 
-                but exhibits the density of a liquid. sCO₂ is nontoxic and nonflammable, with 
+                but exhibits the density of a liquid. sCO$_2$ is nontoxic and nonflammable, with 
                 applications ranging from dry cleaning to decaffeination processes. These 
-                distinctive characteristics make sCO₂ a highly efficient working fluid for 
+                distinctive characteristics make sCO$_2$ a highly efficient working fluid for 
                 power generation, as small changes in temperature or pressure can lead to 
                 significant density variations. <br /><br />
 
-                <strong>Key Advantages of sCO₂ Power Cycles:</strong><br />
+                <strong>Key Advantages of sCO$_2$ Power Cycles:</strong><br />
                 1. <strong>High Efficiency in Power Generation:</strong> Replacing traditional 
-                thermal media such as steam or air with sCO₂ can improve thermal efficiency by up to 10%. <br />
-                2. <strong>Reduced Construction Costs:</strong> sCO₂ equipment is compact, 
+                thermal media such as steam or air with sCO$_2$ can improve thermal efficiency by up to 10%. <br />
+                2. <strong>Reduced Construction Costs:</strong> sCO$_2$ equipment is compact, 
                 with components approximately 10% the size of conventional power plant systems. 
-                For instance, a desk-sized sCO₂ turbine can generate enough power for 10,000 homes. <br />
-                3. <strong>Lower Environmental Impact:</strong> sCO₂ is a non-toxic working fluid 
+                For instance, a desk-sized sCO$_2$ turbine can generate enough power for 10,000 homes. <br />
+                3. <strong>Lower Environmental Impact:</strong> sCO$_2$ is a non-toxic working fluid 
                 compatible with diverse energy sources, including concentrated solar power, natural gas, 
                 coal, biomass, geothermal energy, nuclear energy, ship propulsion systems, and waste heat recovery.
             </p>
