--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!-- MathJax Configuration -->
+		<script>
+			window.MathJax = {
+				tex: {
+					inlineMath: [['$', '$'], ['\\(', '\\)']],
+					displayMath: [['$$', '$$'], ['\\[', '\\]']]
+				}
+			};
+		</script>
+
+		<!-- MathJax Loader -->
 		<script type="text/javascript" async
 			src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 		</script>
@@ -18,14 +30,14 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span> -->
-						<h1>Yang Chao, Ph.D.</h1>
-						<p>All models are wrong, but some are close enough to be useful.</p>
-					</header>
+			<!-- Header -->
+			<header id="header" class="alt">
+				<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span> -->
+				<h1>Yang Chao, Ph.D.</h1>
+				<p>All models are wrong, but some are close enough to be useful.</p>
+			</header>
 
 <!-- Nav -->
 <nav id="nav">
