--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 My research interests lie in the domain of thermal and fluid sciences, 
                 with a specialization in heat transfer. Specifically, my work focuses 
                 on the heat transfer characteristics of supercritical carbon dioxide ($sCO_{\textnormal{2}}$). 
-                $sCO_{\textnormal{2}}$ is carbon dioxide maintained above its critical 
+                sCO$_{\textnormal{2}}$ is carbon dioxide maintained above its critical 
                 temperature and pressure, resulting in unique properties—it behaves like a gas 
                 but exhibits the density of a liquid. $sCO_{\textnormal{2}}$ is nontoxic and nonflammable, with 
                 applications ranging from dry cleaning to decaffeination processes. These 
