--- a/index.html
+++ b/index.html
@@ -190,22 +190,22 @@
             <p>
                 My research interests lie in the domain of thermal and fluid sciences, 
                 with a specialization in heat transfer. Specifically, my work focuses 
-                on the heat transfer characteristics of supercritical carbon dioxide ($sCO_{\textnormal{2}}$). 
+                on the heat transfer characteristics of supercritical carbon dioxide (sCO$_{\textnormal{2}}$). 
                 sCO$_{\textnormal{2}}$ is carbon dioxide maintained above its critical 
                 temperature and pressure, resulting in unique properties—it behaves like a gas 
-                but exhibits the density of a liquid. $sCO_{\textnormal{2}}$ is nontoxic and nonflammable, with 
+                but exhibits the density of a liquid. sCO$_{\textnormal{2}}$ is nontoxic and nonflammable, with 
                 applications ranging from dry cleaning to decaffeination processes. These 
-                distinctive characteristics make $sCO_{\textnormal{2}}$ a highly efficient working fluid for 
+                distinctive characteristics make sCO$_{\textnormal{2}}$ a highly efficient working fluid for 
                 power generation, as small changes in temperature or pressure can lead to 
                 significant density variations. <br /><br />
 
-                <strong>Key Advantages of $sCO_{\textnormal{2}}$ Power Cycles:</strong><br />
+                <strong>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles:</strong><br />
                 1. <strong>High Efficiency in Power Generation:</strong> Replacing traditional 
-                thermal media such as steam or air with $sCO_{\textnormal{2}}$ can improve thermal efficiency by up to 10%. <br />
-                2. <strong>Reduced Construction Costs:</strong> $sCO_{\textnormal{2}}$ equipment is compact, 
+                thermal media such as steam or air with sCO$_{\textnormal{2}}$ can improve thermal efficiency by up to 10%. <br />
+                2. <strong>Reduced Construction Costs:</strong> sCO$_{\textnormal{2}}$ equipment is compact, 
                 with components approximately 10% the size of conventional power plant systems. 
-                For instance, a desk-sized $sCO_{\textnormal{2}}$ turbine can generate enough power for 10,000 homes. <br />
-                3. <strong>Lower Environmental Impact:</strong> $sCO_{\textnormal{2}}$ is a non-toxic working fluid 
+                For instance, a desk-sized sCO$_{\textnormal{2}}$ turbine can generate enough power for 10,000 homes. <br />
+                3. <strong>Lower Environmental Impact:</strong> sCO$_{\textnormal{2}}$ is a non-toxic working fluid 
                 compatible with diverse energy sources, including concentrated solar power, natural gas, 
                 coal, biomass, geothermal energy, nuclear energy, ship propulsion systems, and waste heat recovery.
             </p>
