--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
         <h2>Publications</h2>
     </header>
     <p>
-        Currently, I have two conference papers that I will present: <br />
-        1. 2025 AIAA SciTech Forum in Orlando. <br />
-        2. 2025 ASME Aerospace Structures, Structural Dynamics, and Materials Conference in Houston. <br />
+        I have two accepted conference papers for presentation in 2025: <br />
+        1. A paper authored by me, accepted for the AIAA SciTech Forum in Orlando, Florida. <br />
+        2. A paper authored by my student under my advisement, accepted for the ASME Aerospace Structures, Structural Dynamics, and Materials Conference in Houston, Texas. <br />
+	3. A paper authored by my student, submitted for the SmallSat Europe Conference in Amsterdam, Netherlands. <br />
     </p>
     <p>
         Featured Articles: <br />
