--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
     </header>
     <p>
         I have two accepted conference papers for presentation in 2025: <br />
-        1. A paper authored by me, accepted for the AIAA SciTech Forum in Orlando, Florida. <br />
-        2. A paper authored by my student under my advisement, accepted for the ASME Aerospace Structures, Structural Dynamics, and Materials Conference in Houston, Texas. <br />
-	3. A paper authored by my student, submitted for the SmallSat Europe Conference in Amsterdam, Netherlands. <br />
+        1. A paper authored by me, accepted for the **AIAA SciTech Forum**, Orlando, Florida. <br />
+        2. A paper authored by my student, accepted for the **ASME Aerospace Structures, Structural Dynamics, and Materials Conference**, Houston, Texas. <br />
+	3. A paper authored by my student, submitted for the **SmallSat Europe Conference**, Amsterdam, Netherlands. <br />
     </p>
     <p>
         Featured Articles: <br />
