--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
     </header>
     <p>
         I have two accepted conference papers for presentation in 2025: <br />
-        1. A paper authored by me, accepted for presentation at the **AIAA SciTech Forum**, Orlando, Florida. <br />
-        2. A paper authored by my student under my advisement, accepted for presentation at the **ASME Aerospace Structures, Structural Dynamics, and Materials Conference**, Houston, Texas. <br />
-	3. A paper authored by my student, currently under review for the **SmallSat Europe Conference**, Amsterdam, Netherlands. <br />
+        1. A paper authored by me, accepted for presentation at the <strong>AIAA SciTech Forum</strong> Orlando, Florida. <br />
+        2. A paper authored by my student under my advisement, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
+	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
     </p>
     <p>
         Featured Articles: <br />
