--- a/index.html
+++ b/index.html
@@ -227,26 +227,32 @@
 	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
     </p>
     <p>
-        Featured Articles: <br />
-        <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations">
-            Comprehensive Review of Heat Transfer Correlations of Supercritical CO2 in Straight Tubes Near the Critical Point: A Historical Perspective.
-        </a> <br />
-
-        <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext">
-            Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO2.
-        </a> <br />
-
-        <a href="https://arc.aiaa.org/doi/abs/10.2514/6.2021-3716">
-            Heat Transfer Enhancement Optimization in Supercritical CO2 with Reduced-Order Model.
-        </a> <br />
-
-        <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext">
-            Impact of Uncertainty on Prediction of Supercritical CO2 Properties and Nusselt Numbers.
-        </a> <br />
-
-        Full Publication List: 
-        <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ">My Google Scholar.</a>
-    </p>
+    <strong>Featured Articles:</strong>
+    <ul>
+        <li>
+            <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank">
+                Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
+            </a>
+        </li>
+        <li>
+            <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank">
+                Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO<sub>2</sub>
+            </a>
+        </li>
+        <li>
+            <a href="https://arc.aiaa.org/doi/abs/10.2514/6.2021-3716" target="_blank">
+                Heat Transfer Enhancement Optimization in Supercritical CO<sub>2</sub> with Reduced-Order Model
+            </a>
+        </li>
+        <li>
+            <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext" target="_blank">
+                Impact of Uncertainty on Prediction of Supercritical CO<sub>2</sub> Properties and Nusselt Numbers
+            </a>
+        </li>
+    </ul>
+    <strong>Full Publication List:</strong> 
+    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank">My Google Scholar</a>
+</p>
 </section>
 
 
