--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </p>
     <p>
     <strong>Featured Articles:</strong>
-    <ul>
+    <ul style="margin-top: 5px;">
         <li>
             <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank">
                 Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
