--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <p>
         I have the following conference papers for 2025: <br />
         1. A paper authored by me, accepted for presentation at the <strong>AIAA SciTech Forum</strong> Orlando, Florida. <br />
-        2. A paper authored by my student under my advisement, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
+        2. A paper authored by my student, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
 	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
     </p>
     <p>
@@ -237,11 +237,6 @@
         <li>
             <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank">
                 Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO<sub>2</sub>
-            </a>
-        </li>
-        <li>
-            <a href="https://arc.aiaa.org/doi/abs/10.2514/6.2021-3716" target="_blank">
-                Heat Transfer Enhancement Optimization in Supercritical CO<sub>2</sub> with Reduced-Order Model
             </a>
         </li>
         <li>
