--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 significant density variations. <br /><br />
 
                 <!-- <strong>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles:</strong><br /> -->
-		<h3>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles</h3>
+		<h3><strong>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles</strong></h3>
                 1. <strong>High Efficiency in Power Generation:</strong> Replacing traditional 
                 thermal media such as steam or air with sCO$_{\textnormal{2}}$ can improve thermal efficiency by up to 10%. <br />
                 2. <strong>Reduced Construction Costs:</strong> sCO$_{\textnormal{2}}$ equipment is compact, 
