--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
                 power generation, as small changes in temperature or pressure can lead to 
                 significant density variations. <br /><br />
 
-                <!-- <strong>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles:</strong><br /> -->
 		<h3><strong>Key Advantages of sCO$_{\textnormal{2}}$ Power Cycles</strong></h3>
                 1. <strong>High Efficiency in Power Generation:</strong> Replacing traditional 
                 thermal media such as steam or air with sCO$_{\textnormal{2}}$ can improve thermal efficiency by up to 10%. <br />
@@ -228,8 +227,7 @@
 	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
     </p>
     <p>
-    <strong>Featured Articles:</strong>
-    <ul style="margin-top: 5px;">
+    <h3><strong>Featured Articles</strong></h3>
         <li>
             <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank">
                 Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
