--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <h2>Publications</h2>
     </header>
     <p>
-        I have the following conference papers for 2025: <br />
+        The following conference papers are scheduled for 2025: <br />
         1. A paper authored by me, accepted for presentation at the <strong>AIAA SciTech Forum</strong> Orlando, Florida. <br />
         2. A paper authored by my student, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
 	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
