--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
     </header>
     <p>
         The following conference papers are scheduled for 2025: <br />
-        1. A paper authored by me, accepted for presentation at the <strong>AIAA SciTech Forum</strong> Orlando, Florida. <br />
-        2. A paper authored by my student, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
-	3. A paper authored by my student, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
+        1. A paper authored by me, titled <em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em>, accepted for presentation at the <strong>AIAA SciTech Forum</strong>, Orlando, Florida. <br />
+        2. A paper authored by my student, titled <em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em>, accepted for presentation at the <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, Houston, Texas. <br />
+	3. A paper authored by my student, titled <em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em>, currently under review for the <strong>SmallSat Europe Conference</strong>, Amsterdam, Netherlands. <br />
     </p>
     <p>
     <h3><strong>Featured Articles</strong></h3>
