--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="#Research">Research</a></li>
         <li><a href="#Publications">Publications</a></li>
         <li><a href="#People">People</a></li>
-	<li><a href="#MyHobbies">My Hobbies</a></li>
+	<li><a href="#MyHobbies">Hobbies</a></li>
     </ul>
 </nav>
 
@@ -245,7 +245,7 @@
         </li>
     </ul>
     <strong>Full Publication List:</strong> 
-    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank">My Google Scholar</a>
+    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank">Google Scholar Profile</a>
 </p>
 </section>
 
